@startuml

title __MEDIA's Class Diagram__\n

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Author {
          - id : int
          - firstName : String
          - lastName : String
          + Author()
          + Author()
          + getId()
          + setId()
          + getFirstName()
          + setFirstName()
          + getLastName()
          + setLastName()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Book {
          - nbPage : int
          + getNbPage()
          + setNbPage()
          + Book()
          + Book()
          + getNetPrice()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Cart {
          - mediaRowList : List<CartRow>
          + getTotalNetPrice()
          + add(Media m)
          + remove(Media m)
      }
    }
  }

  package com.m2i.poe {
      package com.m2i.poe.media {
        class CartRow {
            - media : IMedia
            - quantity : int
            + getNetPrice()
            + increment(Media m)
            + decrement(Media m)
        }
      }
    }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Cd {
          - nbPage : int
          + getNbPage()
          + setNbPage()
          + Cd()
          + Cd()
          + getNetPrice()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Dvd {
          - zone : int
          + getZone()
          + setZone()
          + Dvd()
          + Dvd()
          + getNetPrice()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      interface IMedia {
          {abstract} + getPrice()
          {abstract} + setPrice()
          {abstract} + getId()
          {abstract} + setId()
          {abstract} + getTitle()
          {abstract} + setTitle()
          {abstract} + getNetPrice()
          {abstract} + getPublisher()
          {abstract} + setPublisher()
          {abstract} + getAuthorList()
          {abstract} + setAuthorList()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      abstract class Media {
          - price : double
          - id : int
          - title : String
          - authorList : List<Author>
          + Media()
          + Media()
          + getPrice()
          + setPrice()
          + getId()
          + setId()
          + getTitle()
          + setTitle()
          + getPublisher()
          + setPublisher()
          + getAuthorList()
          + setAuthorList()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Media2 {
          + getPrice()
          + setPrice()
          + getId()
          + setId()
          + getTitle()
          + setTitle()
          + getNetPrice()
          + getPublisher()
          + setPublisher()
          + getAuthorList()
          + setAuthorList()
      }
    }
  }
  


  package com.m2i.poe {
    package com.m2i.poe.media {
      class Publisher {
          - id : int
          - name : String
          + Publisher()
          + Publisher()
          + getId()
          + setId()
          + getName()
          + setName()
      }
    }
  }
  

  Book -up-|> Media
  Cd -up-|> Media
  Dvd -up-|> Media
  Media -up-|> IMedia
  Media "*" o-- "1" Publisher : publisher
  Media "*" o-- "*" Author : authorList
  Cart o--> "*" CartRow : cartRowList
  CartRow o--> "1" IMedia : media
  Media2 -up-|> IMedia


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
